# claude-code-lab-tutorial

./: .gitignore  AGENT_HANDOFF.md  COURSE_SPEC.md  PENDING.md  README.md  mkdocs.yml
.github/workflows/: deploy.yml
docs/: index.md  module-00-framing.md  module-01-setup.md  module-02-claude-md.md  module-03-workflows.md  module-04-slash-commands.md  module-05-failure-modes.md  module-06-case-studies.md
docs/teacher-notes/: module-00.md  module-01.md  module-02.md  module-03.md  module-04.md  module-05.md  module-06.md
exercises/m01-pyvalidator-setup/: README.md
exercises/m01-pyvalidator-setup/shell-config/: README.md  gitconfig-lab.example  gitconfig-personal.example  gitconfig.example  zshrc-snippet.sh
exercises/m02-claude-md-stub/: README.md  pyproject.toml
exercises/m02-claude-md-stub/examples/: blocks_state.txt
exercises/m02-claude-md-stub/src/pddl_inspector/: __init__.py  parser.py  scratch.py  state.py  utils.py
exercises/m02-claude-md-stub/tests/: conftest.py  test_parser.py  test_state.py
exercises/m03-tdd-loop/: README.md  example.sbatch
exercises/m04-slash-command/: README.md  validate_stub.py
exercises/m04-slash-command/examples/: blocks.pddl
exercises/m05-bug-hunt/: README.md  review-checklist.md
exercises/m06-case-studies/: README.md
exercises/m06-case-studies/byor-template/: CLAUDE.md  WRITEUP.md
exercises/m06-case-studies/byor-template/dot-claude/skills/example-command/: SKILL.md
