[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pddl-inspector"
version = "0.1.0"
description = "Small Python utilities for inspecting PDDL-like states (workshop exercise)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
